--- a/next-ts/package.json
+++ b/next-ts/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "recoil": "^0.7.2",
     "sass": "^1.50.1"
   },
   "devDependencies": {
