--- a/next-ts/package.json
+++ b/next-ts/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "axios": "^0.26.1",
     "next": "12.1.5",
     "react": "18.0.0",
